@@ -143,6 +143,15 @@ name|java
 operator|.
 name|util
 operator|.
+name|TreeSet
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|concurrent
 operator|.
 name|ConcurrentHashMap
@@ -2451,6 +2460,63 @@ name|legacyCollectionStates
 operator|.
 name|keySet
 argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|,
+name|interestingCollections
+operator|.
+name|size
+argument_list|()
+argument_list|,
+name|watchedCollectionStates
+operator|.
+name|keySet
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|,
+name|lazyCollectionStates
+operator|.
+name|keySet
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|,
+name|clusterState
+operator|.
+name|getCollectionStates
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|LOG
+operator|.
+name|isTraceEnabled
+argument_list|()
+condition|)
+block|{
+name|LOG
+operator|.
+name|trace
+argument_list|(
+literal|"clusterStateSet: version [{}] legacy [{}] interesting [{}] watched [{}] lazy [{}] total [{}]"
+argument_list|,
+name|clusterState
+operator|.
+name|getZkClusterStateVersion
+argument_list|()
+argument_list|,
+name|legacyCollectionStates
+operator|.
+name|keySet
+argument_list|()
 argument_list|,
 name|interestingCollections
 argument_list|,
@@ -2466,10 +2532,11 @@ argument_list|()
 argument_list|,
 name|clusterState
 operator|.
-name|getCollections
+name|getCollectionStates
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 comment|/**    * Refresh legacy (shared) clusterstate.json    */
 DECL|method|refreshLegacyClusterState
@@ -2896,18 +2963,6 @@ argument_list|,
 literal|true
 argument_list|)
 decl_stmt|;
-name|LOG
-operator|.
-name|debug
-argument_list|(
-literal|"Updating live nodes from ZooKeeper... [{}]"
-argument_list|,
-name|nodeList
-operator|.
-name|size
-argument_list|()
-argument_list|)
-expr_stmt|;
 name|newLiveNodes
 operator|=
 operator|new
@@ -2932,12 +2987,24 @@ name|emptySet
 argument_list|()
 expr_stmt|;
 block|}
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|oldLiveNodes
+decl_stmt|;
 synchronized|synchronized
 init|(
 name|getUpdateLock
 argument_list|()
 init|)
 block|{
+name|oldLiveNodes
+operator|=
+name|this
+operator|.
+name|liveNodes
+expr_stmt|;
 name|this
 operator|.
 name|liveNodes
@@ -2959,6 +3026,53 @@ name|newLiveNodes
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Updated live nodes from ZooKeeper... ({}) -> ({})"
+argument_list|,
+name|oldLiveNodes
+operator|.
+name|size
+argument_list|()
+argument_list|,
+name|newLiveNodes
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|LOG
+operator|.
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
+name|LOG
+operator|.
+name|debug
+argument_list|(
+literal|"Updated live nodes from ZooKeeper... {} -> {}"
+argument_list|,
+operator|new
+name|TreeSet
+argument_list|<>
+argument_list|(
+name|oldLiveNodes
+argument_list|)
+argument_list|,
+operator|new
+name|TreeSet
+argument_list|<>
+argument_list|(
+name|newLiveNodes
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 comment|/**    * @return information about the cluster from ZooKeeper    */
